scripts/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flask
  name: python-flask-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - image: manojjahgirdar/ddc-argocd-demo:v21
        name: ddc-argocd-demo
