scripts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flask-app-service
spec:
  selector:
    app: flask
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30000
  type: NodePort
