scripts/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: python-flask-app-route
spec:
  path: /
  to:
    kind: Service
    name: python-flask-app-service
  port:
    targetPort: 8080
